Single scattering approx done in Methodology

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -51,6 +51,8 @@
 
 \newacronym{b_boverb}{$b_b/b$}{backscattering fraction}
 
+\newacronym{czcs}{CZCS}{Coastal Zone Color Scanner}
+
 \newacronym{rte}{RTE}{radiative transfer equation}
 
 \newacronym{obpg}{OBPG}{Ocean Biology Processing Group}
@@ -116,3 +118,9 @@
 \newacronym{roi}{ROI}{region of interest}
 
 \newacronym{pif}{PIF}{pseudo-invariant feature}
+
+\newacronym{rh}{RH}{relative humidity}
+
+\newacronym{rhoam}{$\rho_{am}$}{multiple-scattering aerosol reflectance}
+
+\newacronym{sse}{SSE}{single scattering epsilon}
