--- a/Methodology.tex
+++ b/Methodology.tex
@@ -539,20 +539,18 @@ As an example, \autoref{fig:ELMpxsENVI} shows the different spectra used to perf
   % \vspace{0.5cm}
 \end{figure}
 
-
-
 % ----------------------------
 \subsection{SeaWiFS Algorithm for Case 1 Waters}
 \label{subsec:gordon}
-The following algorithm is based in the method developed by \cite{Gordon:1994}\index{atmospheric correction!Gordon and Wang method} for retrieval of water-leaving radiance and aerosol optical thickness over the oceans with SeaWiFS. The method develop by \cite{Gordon:1994} is still applied to the basic SeaWiFS and MODIS atmospheric correction algorithms for Case 1 water (\cite{IOCCG:2010}).
+The following algorithm is based in the method developed by \cite{Gordon:1994}\index{atmospheric correction!Gordon and Wang method} for retrieval of water-leaving radiance and aerosol optical thickness over the oceans with \gls{seawifs}. The method developed by \cite{Gordon:1994} is still applied to the basic SeaWiFS and \gls{modis} atmospheric correction algorithms for Case 1 water \cite{IOCCG:2010}.
 
-The first step in this algorithm is performing a Rayleigh scattering correction, which means to subtract the reflectance due to Rayleigh scatter $\rho_r$ from the total TOA reflectance $\rho_t$ in \autoref{eq:rhodeglint}. In the SeaWiFS/MODIS algorithm, the Rayleigh scatter component is computed from the Rayleigh LUTs, which were calculated using the vector radiative transfer theory \cite{Wang:1991,IOCCG:2010}. For this work, this Rayleigh scattering component $\rho_r$ can be calculated directly from MODTRAN for the particular illumination and viewing geometry of the sun and the sensor in multiple-scatter mode but without aerosol. In the SeaWiFS/MODIS atmospheric correction algorithm, the whitecap reflectance $\rho_{wc}(\lambda)$ is modelled using input of the sea surface wind speed, and the TOA sun glint component is mostly masked out \cite{IOCCG:2010}. After calculating this Rayleigh scatter and whitecap component, \autoref{eq:rhodeglint} becomes 
+The first step in this algorithm is performing a Rayleigh scattering correction, which means to subtract the reflectance due to Rayleigh scatter $\rho_r$ from the total TOA reflectance $\rho_t$ in \autoref{eq:rhodeglint}. In the SeaWiFS/MODIS algorithm, the Rayleigh scatter component is computed from the Rayleigh LUTs, which were calculated using the vector radiative transfer theory \cite{Wang:1991,IOCCG:2010}. For this work, this Rayleigh scattering component $\rho_r$ could be calculated directly from MODTRAN for the particular illumination and viewing geometry of the sun and the sensor in multiple-scatter mode but without aerosol\todo{Check this. I did not do it!}. In the SeaWiFS/MODIS atmospheric correction algorithm, the whitecap reflectance $\rho_{wc}(\lambda)$ (including glint) is modeled using input of the sea surface wind speed, and the TOA sun glint component is mostly masked out \cite{IOCCG:2010}. After calculating this Rayleigh scatter and whitecap component, \autoref{eq:rhodeglint} becomes 
 \begin{equation}\label{eq:rhodeRayliegh}
  \rho_c(\lambda) = \rho_t(\lambda)-\rho_r(\lambda)-T_v(\lambda)\rho_{wc}(\lambda) = \rho_a(\lambda)+\rho_{ra}(\lambda)+T_v(\lambda)\rho_{w}(\lambda)
 \end{equation}
 where $\rho_c(\lambda)$ is the Rayleigh-corrected reflectance. 
 
-If we define the total multiple-scattering aerosol reflectance $\rho_{am}$ as
+If we define the total \gls{rhoam}\index{reflectance!multiple-scattering aerosol, $\rho_{am}$} as
 \begin{equation}\label{eq:rhoam1}
   \rho_{am}(\lambda) = \rho_a(\lambda)+\rho_{ra}(\lambda)
 \end{equation}
@@ -561,14 +559,14 @@ then \autoref{eq:rhodeRayliegh} becomes
  \rho_c(\lambda) = \rho_{am}(\lambda) + T_v(\lambda)\rho_{w}(\lambda)
 \end{equation}
 
-The following approach is taken in the SeaWiFS/MODIS atmospheric correction algorithm to retrieve $\rho_w$. For Case 1 water (e.g. open ocean), the contribution of the water $\rho_{w}$ to the total reflectance $\rho_t$ in the NIR is negligible. This fact is used to estimate $\rho_{am}$ in the NIR bands, and then these results are extrapolated to the visible bands using aerosol modeling. Finally, if $T_v$ is estimated, the $\rho_w$ in the visible bands can be computed.
+The following approach is taken in the SeaWiFS/MODIS atmospheric correction algorithm to retrieve $\rho_w$. For Case 1 water (e.g. open ocean), the contribution of the water $\rho_{w}$ to the total reflectance $\rho_t$ in the NIR is negligible. This fact is used to estimate $\rho_{am}$ in the NIR bands, and then these results are extrapolated to the visible bands using aerosol modeling (\autoref{fig:epsilonvslambda}). Finally, if $T_v$ is estimated, the $\rho_w$ in the visible bands can be computed.
 
 There are two different approaches to determine the $\rho_{am}(\lambda)$ term at this point. The first one is to use a single-scattering approximation for $\rho_{am}(\lambda)$. The second one is to determine the multiple-scattering term $\rho_{am}(\lambda)$ based in the single scattering approximation, assuming that there exist a linear relationship between them. Both approaches are described below.
 
 % -------------------
-\subsubsection{Single Scattering}
+\subsubsection{Single Scattering approach to determine $\rho_{am}(\lambda)$}
 \label{subsubsec:singlescat}
-The aerosol is highly variable, and unlike the Rayleigh scattering component $\rho_r$, its effect in the total signal cannot be known {\it a priori} (\cite{Gordon:1994}). One of the first efforts to overcome this problem was developed for the CZCS atmospheric correction algorithm using a single-scattering approximation for calculating the aerosol effect in the total signal. Its logic is as follow. If the optical thickness of the atmospheric is considered $<<1$, then the term $\rho_a$ can be replaced by is single-scattering value $\rho_{as}$ (the $\rho_{ra}$ is ignored since it is a term related to multiple scattering). \autoref{eq:rhoam1} then becomes
+The aerosol is highly variable, and unlike the Rayleigh scattering component $\rho_r$, its effect in the total signal cannot be known {\it a priori} \cite{Gordon:1994}. One of the first efforts to overcome this problem was developed for the \gls{czcs} atmospheric correction algorithm using a single-scattering approximation for calculating the aerosol effect in the total signal. Its logic is as follow. If the optical thickness of the atmospheric is considered $<<1$, then the term $\rho_a$ can be replaced by is single-scattering value $\rho_{as}$ (the $\rho_{ra}$ term is ignored since it is a term related to multiple scattering). \autoref{eq:rhoam1} then becomes
 \begin{equation}\label{eq:singleapprox}
   \rho_{am}(\lambda) = \rho_a(\lambda)+\cancel{\rho_{ra}(\lambda)} \approx \rho_{as}(\lambda)
 \end{equation}
@@ -592,12 +590,12 @@ For Case 1 waters, the term $\rho_{w}$ is assumed to be zero for NIR bands. If w
 \end{equation}
 where $\rho_{x}^{(i)}$ denotes a reflectance at band $i$ with wavelength $\lambda_i$. \autoref{eq:seawifsam7} and \autoref{eq:seawifsam8} mean that the aerosol reflectance term for band 7 and band 8 in SeaWiFS is equal to only the Rayleigh-corrected reflectance, which is known from the image. Now, we need to find a way to use this result to calculate the atmospheric reflectance for the rest of the bands.
 
-\cite{Gordon:1994} define the atmospheric-correction parameter named single scattering epsilon (SSE)(\cite{IOCCG:2010}) $\varepsilon(\lambda_s,\lambda_l)$ as
+\cite{Gordon:1994} define the atmospheric correction parameter named \gls{sse}\index{single scattering epsilon (SSE), $\varepsilon$} $\varepsilon(\lambda_s,\lambda_l)$ \cite{IOCCG:2010} as
 \begin{equation}\label{eq:espilon}
   \varepsilon(\lambda_s,\lambda_l) \equiv \frac{\rho_{as}(\lambda_s)}{\rho_{as}(\lambda_l)} = \\
   \frac{\omega_a(\lambda_s)\tau_a(\lambda_s)p_a(\theta_v,\phi_v;\theta_0,\phi_0;\lambda_s)}{\omega_a(\lambda_l)\tau_a(\lambda_l)p_a(\theta_v,\phi_v;\theta_0,\phi_0;\lambda_l)}
 \end{equation}
-where the indexes ``$s$'' and ``$l$'' stand for short and long wavelength, associated with the NIR bands, i.e. $\lambda_s=756nm$ and $\lambda_l=865nm$ for SeaWiFS. If the value of $\varepsilon(\lambda_i,\lambda_l)$ for the band at $\lambda_i$ (visible bands) can be computed from $\varepsilon(\lambda_s,\lambda_l)$, then $\rho_{as}(\lambda_i)$ can be determined as
+where the indexes ``$s$'' and ``$l$'' stand for short and long wavelength, associated with the NIR bands, i.e. $\lambda_s=756nm$ and $\lambda_l=865nm$ for SeaWiFS. If the value of $\varepsilon(\lambda_i,\lambda_l)$ for the \gls{vis} band at $\lambda_i$ can be computed from $\varepsilon(\lambda_s,\lambda_l)$, then $\rho_{as}(\lambda_i)$ can be determined as
 \begin{equation}\label{eq:rholambda_i}
   \rho_{as}(\lambda_i) = \varepsilon(\lambda_i,\lambda_l)\rho_{as}(\lambda_l),
 \end{equation}
@@ -628,18 +626,18 @@ The single-approximation is no longer an adequate approximation in cases where t
 
 %where $\rho_{as}^{(i)}$ for band $i$ is the single-scattering aerosol reflectance and $I=1..N$ denominates a set of $N$ simulated aerosol models obtained from, for example, an atmospheric radiative transfer model such as MODTRAN. This set of simulated aerosol models could be MODTRAN runs for different combination of particle size distribution (e.g. maritime, tropospheric, coastal, or urban), relative humidity, visibility, water vapor, etc., to simulate different atmosphere conditions that can occur in the scene.
 % -------------------
-\subsubsection{Multiple Scattering}
-As mentioned  previously, we need to calculate this total multiple-scattering aerosol reflectance $\rho_{am}$ in order to obtain the desired water-leaving reflectance $\rho_w$. The multiple-scattering depends significantly on the aerosol model (\cite{Gordon:1997}). In the single-scattering approach previously described, the multiple-scattering was ignored and specific aerosol properties were not needed for the atmospheric correction. On the other hand, if we want to include the multiple-scattering effects in the atmospheric correction algorithm in order to obtain more accurate water reflectance $\rho_w$, it is necessary to utilize specific aerosol models. As a way to use the same reasoning used in the single-scattering algorithm, we can define multiple-scattering term as
+\subsubsection{Multiple Scattering approach to determine $\rho_{am}(\lambda)$}
+As mentioned  previously, we need to calculate the total multiple-scattering aerosol reflectance $\rho_{am}$ in order to obtain the desired water-leaving reflectance $\rho_w$. The multiple-scattering depends significantly on the aerosol model \cite{Gordon:1997}. In the single-scattering approach previously described, the multiple-scattering was ignored and specific aerosol properties were not needed for the atmospheric correction. On the other hand, if we want to include the multiple-scattering effects in the atmospheric correction algorithm in order to obtain more accurate water reflectance $\rho_w$, it is necessary to utilize specific aerosol models. As a way to use the same reasoning used in the single-scattering algorithm, we can define multiple-scattering term as
 \begin{equation}\label{eq:multscat}
   \rho_a(\lambda) + \rho_{ra}(\lambda) = K[\lambda,\rho_{as}(\lambda)]\rho_{as}(\lambda)
 \end{equation}
-where $K$ represents the relationship between the multiple-scattering and single-scattering. \cite{Wang:1991} has shown that a monotonic near-linear relation exists between $\rho_a(\lambda)+\rho_{ra}(\lambda)$ for the multiple-scattering model and $\rho_{as}(\lambda)$ for the single-scattering model. \cite{Gordon:1994} provided a LUT for $K[\lambda,\rho_{as}(\lambda)]$ by solving the radiative transfer equation (RTE) of a set of $N$ candidate aerosol models. These aerosol models were from, or derived from, the work of \cite{Shettle:1979}. The aerosol models are Oceanic, Maritime, Coastal and Tropospheric for different values of relative humidity (RH). The LUT was created for different sensor-sun geometry, single-scattering albedo and \AA ngstr\"{o}m exponent. The RTE is solved by using vector radiative transfer (\cite{IOCCG:2010}). For the SeaWiFS/MODIS algorithm, the $\rho_a(\lambda)+\rho_{ra}$ value for a given geometry is fit to a fourth order polynomial in the single-scattering aerosol reflectance $\rho_{as}(\lambda)$, i.e.,
+where $K$ represents the relationship between the multiple-scattering and single-scattering. \cite{Wang:1991} has shown that a monotonic near-linear relation exists between $\rho_a(\lambda)+\rho_{ra}(\lambda)$ for the multiple-scattering model and $\rho_{as}(\lambda)$ for the single-scattering model. \cite{Gordon:1994} provided a LUT for $K[\lambda,\rho_{as}(\lambda)]$ by solving the \gls{rte} of a set of $N$ candidate aerosol models. These aerosol models were from, or derived from, the work of \cite{Shettle:1979}. The aerosol models are Oceanic, Maritime, Coastal and Tropospheric for different values of \gls{rh}. The LUT was created for different sensor-sun geometry, single-scattering albedo and \AA ngstr\"{o}m exponent. The RTE is solved by using vector radiative transfer \cite{IOCCG:2010}. For the SeaWiFS/MODIS algorithm, the $\rho_a(\lambda)+\rho_{ra}$ value for a given geometry is fit to a fourth order polynomial in the single-scattering aerosol reflectance $\rho_{as}(\lambda)$, i.e.,
 \begin{equation}\label{eq:polynomial}
   \rho_a+\rho_{ra} = a\rho_{as}+b\rho_{as}^2+c\rho_{as}^3+d\rho_{as}^4
 \end{equation}
 where $a$, $b$, $c$ and $d$ are the constants contained in the LUT for a large number of viewing-sun geometries and for values of $\tau_a(\lambda)$ up to $0.8$.
 
-Similar to the single-scattering approach, the assumption of negligible $\rho_w$ in the NIR allows us to determine the quantities $\rho_a(\lambda_s)+\rho_{ra}(\lambda_s)$ and $\rho_a(\lambda_l)+\rho_{ra}(\lambda_l)$ in the NIR. Once these quantities are determined from the sensor-measured values, the $\rho_{as}(\lambda)$ values for the NIR bands are estimated from these quantities using the LUT. Furthermore, because $\rho_{as}(\lambda)$ depends on aerosol phase function, single-scattering albedo, and optical thickness, this value can be computed for each aerosol model. Then, the single scattering epsilon (SSE)  values (described in \S\ref{subsubsec:singlescat}) for the NIR bands (i.e. $\varepsilon(\lambda_s,\lambda_l)$) can be calculated from the single-scattering reflectance values for each aerosol model and the measured values using \autoref{eq:espilon}. 
+Similar to the single-scattering approach, the assumption of negligible $\rho_w$ in the NIR allows us to determine the quantities $\rho_a(\lambda_s)+\rho_{ra}(\lambda_s)$ and $\rho_a(\lambda_l)+\rho_{ra}(\lambda_l)$ in the NIR. Once these quantities are determined from the sensor-measured values, the $\rho_{as}(\lambda)$ values for the NIR bands are estimated from these quantities using the LUT. Furthermore, because $\rho_{as}(\lambda)$ depends on aerosol phase function, single-scattering albedo, and optical thickness, this value can be computed for each aerosol model. Then, the \gls{sse}  values (described in \S\ref{subsubsec:singlescat}) for the NIR bands (i.e. $\varepsilon(\lambda_s,\lambda_l)$) can be calculated from the single-scattering reflectance values for each aerosol model and the measured values using \autoref{eq:espilon}. 
 
 In order to determine multiple-scattering values in the VIS, the most appropriate aerosol models are selected by comparing the SSE computed from the sensor-measured values with the ones computed from each aerosol model. This is accomplished in the following fashion. After deriving $\varepsilon(\lambda_s,\lambda_l)$, the next step is to estimate $\varepsilon(\lambda_i,\lambda_l)$. $\varepsilon(\lambda_s,\lambda_l)$ mostly falls between those for two of the $N$ aerosol models. Therefore, $\varepsilon(\lambda_i,\lambda_l)$ is assumed to fall between the same two aerosol models proportionately in the same manner as $\varepsilon(\lambda_s,\lambda_l)$. Then, \autoref{eq:rholambda_i} is used to estimate single-scattering value in the rest of the bands from $\rho_{as}(\lambda_l)$. 
 
@@ -661,7 +659,7 @@ A summary of the method developed by \cite{Gordon:1994} is described below.
 % ------------------------------
 \subsection{SeaWiFS Algorithm for Case 2 Water}\label{subsec:ruddick}
 
-The next atmospheric correction method is based in the method developed by Gordon~\cite{Gordon:1997} for ocean color satellites (i.e. SeaWiFS, MODIS), and extended by \cite{Ruddick:2000bs} for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. As stated previously, the methods developed by \cite{Gordon:1994} assumes a zero water-leaving radiance for the NIR bands, which is not valid for highly turbid coastal and inland waters. Backscatter from particles in this waters could contribute to signal in the NIR bands, causing an over-estimation of the aerosol contribution and therefore an under-estimation of the water-leaving reflectances, even leading to negative values in the visible, which is not possible. 
+The next atmospheric correction method is based in the method developed by \cite{Gordon:1994} for ocean color satellites (i.e. SeaWiFS, MODIS), and extended by \cite{Ruddick:2000bs} for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters (\S\ref{subsec:gordon}). As stated previously, the methods developed by \cite{Gordon:1994} assumes a zero water-leaving radiance for the NIR bands, which is not valid for highly turbid coastal and inland waters. Backscatter from particles in this waters could contribute to signal in the NIR bands, causing an over-estimation of the aerosol contribution and therefore an under-estimation of the water-leaving reflectances, even leading to negative values in the visible, which is not possible. 
 
 In order to overcome this problem, \cite{Ruddick:2000bs} replaced the black water assumption with two assumptions: the assumption of spatial homogeneity of the SeaWiFS's NIR bands ratio ($765:865-nm$) for aerosol reflectance and for water-leaving reflectance. These two ratios are used as calibration parameters after inspection of the Rayleigh-corrected reflectance scatterplot. The algorithm is described in more details below.
 
